--- a/public/share.html
+++ b/public/share.html
@@ -6,22 +6,21 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Share</title>
-  <meta name="description" content="">
+  <title>Titulo</title>
+  <meta name="description" content="Descripción">
 
   <!-- Facebook -->
-  <meta property="og:url" content="https://socialsnacksandbox.com/spotify-nike/share.html" />
+  <meta property="og:url" content="https://dominio.com/share.html" />
   <meta property="og:type" content="website" />
-  <meta property="og:title" content="NIKE React" />
-  <meta property="og:description" content="Nike te prepara para una recorrida intensa otorgandote una playlist personalizada. #nike"
-  />
-  <meta property="og:image" content="https://socialsnacksandbox.com/spotify-nike/images/share-default.jpg" />
+  <meta property="og:title" content="Titulo" />
+  <meta property="og:description" content="Descripción #hash" />
+  <meta property="og:image" content="https://dominio.com/images/share-default.jpg" />
 
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image" />
 
   <!-- Redirect -->
-  <meta http-equiv="refresh" content="0; url=https://socialsnacksandbox.com/spotify-nike/" />
+  <meta http-equiv="refresh" content="0; url=https://dominio.com/" />
 </head>
 
 <body>
